sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:8: error: illegal start of simple expression
    if (i == length){
    ^